add table endpoint
